Layout fix
small Layout fix which caused an unwanted scrollbar

--- a/src/app/sensify-components/sensify-start/sensify-start.scss
+++ b/src/app/sensify-components/sensify-start/sensify-start.scss
@@ -118,7 +118,8 @@ sensify-page-start {
     #headingCol{
         top:-10px;
         text-align: left;
-        overflow:auto;
+        overflow-y: hidden;
+        overflow-x:auto;
     }
 
     #headingSensor{
@@ -140,7 +141,7 @@ sensify-page-start {
     //Third Row
     #dataRow{
         background:rgba(0, 0, 0, 0.5);
-        height:52%;
+        height:60%;
         overflow: auto;
         margin-top: 0px;
     }
@@ -149,13 +150,15 @@ sensify-page-start {
         top:-10px;
         font-size: 20px;
         line-height: 2;
-        text-align: left;
     }
 
     #valueCol{
         top:-10px;
         font-size: 20px;
         line-height: 2;
+    }
+
+    #values{
         margin-left:-30px;
     }
 
@@ -166,12 +169,9 @@ sensify-page-start {
         text-align: left;
     }
 
-
-
-
-
-
-
+    #units{
+        margin-left:-30px;
+    }
 
     #sensors{
         border-right: 1px solid #aaa;
